--- a/src/assets/css/components/tailwind-core.css
+++ b/src/assets/css/components/tailwind-core.css
@@ -20,6 +20,11 @@
 	background: var(--bg-primary);
 }
 
+.padded-container {
+	@apply container;
+	@apply px-6;
+}
+
 body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	background-color: var(--bg-primary);
